--- a/Phonebook/Phonebook.csproj
+++ b/Phonebook/Phonebook.csproj
@@ -14,6 +14,11 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.3" />
     </ItemGroup>
 
     <ItemGroup>
