--- a/Phonebook/Phonebook.csproj
+++ b/Phonebook/Phonebook.csproj
@@ -10,6 +10,8 @@
 
         <!-- Set this to true if you enable server-side prerendering -->
         <BuildServerSideRenderer>false</BuildServerSideRenderer>
+        <UserSecretsId>a260a788-6754-4d49-9cec-d41cba6461f8</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,6 +22,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.3" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     </ItemGroup>
 
     <ItemGroup>
